# Standalone (detached from the spike workspace) so it builds as a normal gem
# extension. The cdylib is the Ruby extension; V8 is baked in (a from-source V8
# build links library-TLS on linux, so the .so loads fine — no separate
# libv8-rusty needed under the cibuildgem native-per-platform model).
[package]
name = "rusty_racer"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# rb-sys: exposes magnus::rb_sys (protect — catch a Ruby raise from a host
# callback so it can't longjmp through V8 — and the raw VALUE conversions used
# to root the owner thread).
magnus = { version = "0.8", features = ["rb-sys"] }
rb-sys = "0.9"
v8 = "150.0.0"
# pthread stack-bounds query, to set V8's stack limit per op relative to the
# current native thread (in-thread V8 runs on the Ruby thread's stack).
libc = "0.2"
