# Standalone (detached from the spike workspace) so it builds as a normal gem
# extension. The cdylib is the Ruby extension; V8 is baked in (a from-source V8
# build links library-TLS on linux, so the .so loads fine — no separate
# libv8-rusty needed under the cibuildgem native-per-platform model).
[package]
name = "rusty_racer"
version = "0.1.1"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# rb-sys: exposes magnus::rb_sys (protect — catch a Ruby raise from a host
# callback so it can't longjmp through V8 — and the raw VALUE conversions used
# to root the owner thread).
magnus = { version = "0.8", features = ["rb-sys"] }
rb-sys = "0.9"
# simdutf: SIMD-accelerated UTF-8/UTF-16 transcoding in rusty_v8's String
# conversion (to_rust_string_lossy etc.), the path every V8->Ruby string crosses.
# ~6-8x faster marshalling for non-ASCII results (measured); ASCII is unaffected.
# Needs the linked archive built with rusty_v8_enable_simdutf=true (libv8-rusty.yml
# for linux; the v8 crate auto-fetches Deno's _simdutf prebuilt on macOS).
v8 = { version = "150.0.0", features = ["simdutf"] }
# pthread stack-bounds query, to set V8's stack limit per op relative to the
# current native thread (in-thread V8 runs on the Ruby thread's stack).
libc = "0.2"
